--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,11 @@
 version: '3'
 services:
-  # backend:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 8000:8000
-  #   volumes:
-  #     - ./backend:/app
-  #   depends_on:
-  #     - database
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - 8000:8000
 
   frontend:
     build:
