--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
   backend:
     build:
-      context: ./backend
+      context: ./bcknd-dashboard
       dockerfile: Dockerfile
     ports:
-      - 8000:8000
+      - 8080:8080
 
   frontend:
     build:
